update mongodb link and collection/database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT= 6000
-MONGODB_URI=mongodb+srv://alanmmassey:elzUXH0ic1NHVqAW@cluster0.g9tjjkl.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://andronikmk:123@cluster0.1itbwlr.mongodb.net/recipe_catalog?retryWrites=true&w=majority&appName=Cluster0
